<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mine_color"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Result"
        style="@style/CulceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/cardview_compat_inset_shadow"
        android:layout_weight="1" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="5">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/one"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/two"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/three"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dot"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/div"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_div" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/four"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/five"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/six"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Add"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sub"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_sub" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/seven"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eight"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nine"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/zero"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mul"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_mul" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_15"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnSpan="3"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_equ" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/C"
            style="@style/CulceButtons1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_del" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/AC"
            style="@style/CulceButtons1.AC"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_del1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/theme"
            style="@style/CulceButtons1.Theme"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnSpan="5"
            android:layout_columnWeight="1"
            android:onClick="ButtonClick"
            android:text="@string/button_theme"
            app:cornerRadius="10dp"
            app:rippleColor="@color/white"
            app:strokeWidth="@color/white" />


    </GridLayout>

</FrameLayout>